force-app/main/default/objects/ssot__PersonSkill__dlm/fields/ssot__PersonObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonObject__c</fullName>
    <label>Person Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>