force-app/main/default/objects/ssot__PersonSkill__dlm/fields/ssot__PersonSkill_SkillId_map_Skill_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonSkill_SkillId_map_Skill_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonSkill_SkillId_map_Skill_Id_N_1</label>
    <referenceTo>ssot__Skill__dlm</referenceTo>
    <relationshipLabel>PersonSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
    <relationshipName>PersonSkill_SkillId_map_Skill_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>