force-app/main/default/objects/ssot__PersonSkill__dlm/fields/ssot__PersonSkillProficiencyLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonSkillProficiencyLevel__c</fullName>
    <label>Person Skill Proficiency Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonSkillProficiencyLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>