force-app/main/default/objects/ssot__PersonSkill__dlm/fields/ssot__PersonSkillVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonSkillVerificationStatus__c</fullName>
    <label>Person Skill Verification Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonSkillVerificationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>