force-app/main/default/objects/ssot__PersonSkill__dlm/fields/ssot__rel_1741334819773_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334819773_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonSkill_PersonId_map_AccountCont_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>PersonSkill_PersonId_map_AccountCont_rel</relationshipLabel>
    <relationshipName>rel_1741334819773_end</relationshipName>
    <type>Lookup</type>
</CustomField>